@@ -2,22 +2,29 @@ package com.crud.tasks.controller;
 
 
 import com.crud.tasks.domain.CreatedTrelloCardDto;
+import com.crud.tasks.domain.TrelloBoardDto;
 import com.crud.tasks.domain.TrelloCardDto;
+import com.crud.tasks.domain.TrelloListDto;
 import com.crud.tasks.trello.facade.TrelloFacade;
+import com.google.gson.Gson;
+import org.hamcrest.Matchers;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
+import org.springframework.test.context.junit.jupiter.web.SpringJUnitWebConfig;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 import org.springframework.test.web.servlet.result.MockMvcResultMatchers;
 
 import java.util.Collections;
+import java.util.List;
 
 import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
+@SpringJUnitWebConfig
 @WebMvcTest(TrelloController.class)
 public class TrelloControllerTest {
 
@@ -28,58 +35,66 @@ public class TrelloControllerTest {
     private TrelloFacade trelloFacade;
 
     @Test
-    public void createTrelloCardTest() throws Exception {
+    void shouldCreateTrelloCard() throws Exception {
 
-        //Given
-        TrelloCardDto trelloCardDto = new TrelloCardDto();
-        trelloCardDto.setName("Test Card");
+        // Given
+        TrelloCardDto trelloCardDto =
+                new TrelloCardDto("Test", "Test description", "top", "1");
 
-        CreatedTrelloCardDto createdTrelloCardDto = new CreatedTrelloCardDto();
-        createdTrelloCardDto.setId("1");
-        createdTrelloCardDto.setName("Test Card");
+        CreatedTrelloCardDto createdTrelloCardDto =
+                new CreatedTrelloCardDto("232", "Test", "http://test.com");
 
-        when(trelloFacade.createCard(trelloCardDto)).thenReturn(createdTrelloCardDto);
+        when(trelloFacade.createCard(any(TrelloCardDto.class))).thenReturn(createdTrelloCardDto);
+        Gson gson = new Gson();
+        String jsonContent = gson.toJson(trelloCardDto);
 
         //When & Then
-        mockMvc.perform(MockMvcRequestBuilders
+        mockMvc
+                .perform(MockMvcRequestBuilders
                         .post("/v1/trello/cards")
-                        .content("{\"name\":\"Test Card\"}")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(MockMvcResultMatchers.jsonPath("$.id").value("1"))
-                .andExpect(MockMvcResultMatchers.jsonPath("$.name").value("Test Card"));
-
-        verify(trelloFacade, times(1)).createCard(trelloCardDto);
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .characterEncoding("UTF-8")
+                        .content(jsonContent))
+                .andExpect(MockMvcResultMatchers.jsonPath("$.id", Matchers.is("232")))
+                .andExpect(MockMvcResultMatchers.jsonPath("$.name", Matchers.is("Test")))
+                .andExpect(MockMvcResultMatchers.jsonPath("$.shortUrl", Matchers.is("http://test.com")));
     }
 
     @Test
-    public void testGetTrelloBoards() throws Exception {
+    void shouldFetchTrelloBoards() throws Exception {
 
-        //Given
-        when(trelloFacade.fetchTrelloBoards()).thenReturn(Collections.emptyList());
+        // Given
+        List<TrelloListDto> trelloLists = List.of(new TrelloListDto("1", "Test list", false));
+        List<TrelloBoardDto> trelloBoards = List.of(new TrelloBoardDto("1", "Test Task", trelloLists));
+        when(trelloFacade.fetchTrelloBoards()).thenReturn(trelloBoards);
 
         //When & Then
-        mockMvc.perform(MockMvcRequestBuilders.get("/v1/trello/boards")
+        mockMvc
+                .perform(MockMvcRequestBuilders
+                        .get("/v1/trello/boards")
                         .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
-
-        verify(trelloFacade, times(1)).fetchTrelloBoards();
+                .andExpect(MockMvcResultMatchers.jsonPath("$", Matchers.hasSize(1)))
+                .andExpect(MockMvcResultMatchers.jsonPath("$[0].id", Matchers.is("1")))
+                .andExpect(MockMvcResultMatchers.jsonPath("$[0].name", Matchers.is("Test Task")))
+                .andExpect(MockMvcResultMatchers.jsonPath("$[0].lists", Matchers.hasSize(1)))
+                .andExpect(MockMvcResultMatchers.jsonPath("$[0].lists[0].id", Matchers.is("1")))
+                .andExpect(MockMvcResultMatchers.jsonPath("$[0].lists[0].name", Matchers.is("Test list")))
+                .andExpect(MockMvcResultMatchers.jsonPath("$[0].lists[0].closed", Matchers.is(false)));
     }
 
     @Test
-    public void testGetEmptyTrelloBoards() throws Exception {
+    void shouldFetchEmptyTrelloBoards() throws Exception {
 
-        //Given
-        when(trelloFacade.fetchTrelloBoards()).thenReturn(Collections.emptyList());
+        // Given
+        when(trelloFacade.fetchTrelloBoards()).thenReturn(List.of());
 
         //When & Then
-        mockMvc.perform(MockMvcRequestBuilders.get("/v1/trello/boards")
+        mockMvc
+                .perform(MockMvcRequestBuilders
+                        .get("/v1/trello/boards")
                         .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(MockMvcResultMatchers.jsonPath("$").isArray())
-                .andExpect(MockMvcResultMatchers.jsonPath("$").isEmpty());
-
-        verify(trelloFacade, times(1)).fetchTrelloBoards();
+                .andExpect(MockMvcResultMatchers.status().is(200))
+                .andExpect(MockMvcResultMatchers.jsonPath("$", Matchers.hasSize(0)));
     }
 }
 
